# CRAFT-onnx

./: .gitignore  craft2onnx.py  pyproject.toml
basenet/: vgg16_bn.py
